# rs-workshop

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENCE  README.md  docker-compose.db.yml  docker-compose.test.yml
backend/: Cargo.toml
backend/migrations/: 20230916191941_Initial_Migration.sql
backend/src/: api.rs  lib.rs  main.rs  raw_tables.rs
backend/src/api/: admin.rs  participant.rs  session.rs
backend/src/scheduler/: csvbased.rs
doc/: apidoc.md
frontend/: package-lock.json  package.json
migrations/: 20230916191941_Initial_Migration.sql
src/: lib.rs  main.rs  raw_tables.rs  scheduler.rs
src/scheduler/: csvbased.rs
