[package]
name = "rs-workshop"
version = "0.0.1"
authors = ["Jonathan \"Nath\" Schild <nath@j-schild.de>"]
edition = "2021"
description = "TBA"
license = "MIT"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "migrate" , "uuid"] }