[package]
name = "rs-workshop"
version = "0.0.1"
authors = ["Jonathan \"Nath\" Schild <nath@j-schild.de>"]
edition = "2021"
description = "Workshop participant and room scheduler. Designed for the Ophase at the Department of Computer Science of TU Darmstadt."
license = "MIT"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.8.0"
actix-web = "4.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "macros", "migrate" , "uuid"] }
tokio = { version = "1.32.0", features = ["full"] }
